@@ -6,6 +6,9 @@
         - Minor cleanups and improvements
         - Introduce --skip-inline-tags parameter
         - Introduce KorAP::XML::TEI::Inline class
+        - Introduce --skip-inline-token-annotations parameter
+        - Deprecate KORAPXMLTEI_INLINE environment variable
+          in favor of --skip-inline-token-annotations
 
 1.00 2021-02-18 Release
         - -s option added that uses sentence boundaries
